--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     properties:
       hibernate:
         show_sql: true
-        format_ssql: true
+        format_sql: true
         
   config:
     activate:
